@@ -970,6 +970,7 @@ avrtest_strtof converts an ASCII string to float, just like strtof.
 avrtest_prandf returns an evenly distributed pseudo-random number
 in the specified range.  The pseudo-random source is the same like
 for avrtest_prand.
+avrtest_ftol and avrtest_ltof convert between float and long double.
 
 AVRtest will terminate with an error if the host IEEE single cannot
 be used for emulation.
